--- a/styles/index.css
+++ b/styles/index.css
@@ -6,9 +6,9 @@ div {
     position: relative;
     width: 100%;
     height: 100vh;
-    z-index: 1;
+    z-index: 0;
 }
-div:first-child{
+.first{
     background-image: url("../pics/Polygon\ Luminary.svg");
     background-size: cover;
     z-index: -10;
@@ -20,28 +20,32 @@ div:first-child{
     position: fixed;
     left: 35%;
     font-size: 36px;
-    top: 80px;
+    top: 70px;
     color: white;
     text-align: center;
     font-family: 'Orbitron',cursive;
 }
-div:nth-child(2){
-    background-color: rgb(31, 37, 41);
+.second{
+    background-color: rgb(40, 56, 68);
+    z-index: -2;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 .collection{
     position: fixed;
     z-index: 0;
-    transform: translate(380px, 80px);
+    transform: translate(300px, 80px);
     width: 520px;
 }
 
-div:nth-child(3){
+.third{
     background-color: rgb(60, 117, 155);
 }
-div:nth-child(4){
+.fourth{
     background-color: rgb(39, 39, 39);
 }
-div:last-child{
+.fifth{
     background-color: rgb(215, 230, 19);
 }
 .holding-chip{
@@ -75,4 +79,44 @@ div:last-child{
     width: 200px;
     right: 400px;
     bottom: 0;
+}
+.history{
+    position: absolute;
+}
+.history-elements{
+    position: absolute;
+}
+.second p{
+    font-size: 22px;
+    color: aquamarine;
+}
+.robot-chess{
+    width: 25%;
+}
+.alan{
+    width: 200px;
+    height: 200px;
+    transform: translate(820px, 30px);
+}
+.line1{
+    text-align: center;
+    width: 50%;
+    transform: translate(10px, 80px);
+}   
+.line2{
+    text-align: center;
+    width: 50%;
+    transform: translate(10px, 80px);
+
+}
+.robot-chess{
+    width: 250px;
+    height: 200px;
+    transform: translate(800px, 0);
+}
+.history2{
+    transform: translate(0, 50vh);
+}
+.history1{
+    transform: translate(0, 2vh);
 }
