--- a/styles/index.css
+++ b/styles/index.css
@@ -1,22 +1,29 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: cursive;
+}
+body{
+    width: 100%;
+    overflow-x: hidden;
 }
 div {
     position: relative;
     width: 100%;
     height: 100vh;
-    z-index: 0;
+}
+.first, .second{
+    border: 0.5px rgb(61, 58, 58)  solid;
 }
 .first{
     background-image: url("../pics/Polygon\ Luminary.svg");
     background-size: cover;
-    z-index: -10;
+    z-index: -100;
     height: 100vh;
     background-attachment: fixed;
 }
 .title{
-    z-index: -9;
+    z-index: -99;
     position: fixed;
     left: 35%;
     font-size: 36px;
@@ -26,43 +33,60 @@ div {
     font-family: 'Orbitron',cursive;
 }
 .second{
-    background-color: rgb(40, 56, 68);
-    z-index: -2;
+    background-color: rgb(44, 65, 82);
+    z-index: 0;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
 }
 .collection{
     position: fixed;
-    z-index: 0;
+    z-index: -99;
     transform: translate(300px, 80px);
     width: 520px;
 }
 
 .third{
-    background-color: rgb(60, 117, 155);
+    background-image: url("../pics/header.jpg");
+    background-size: cover;
+    height: 100vh;
+    background-attachment: fixed;
+    justify-content: space-between;
+    align-items: center;   
+}
+.third-inner{
+    position: relative;
+    background-color: rgb(152, 253, 219);
+    width: 10%;
+    border-radius: 10px;
+    left: 67%;
+    height: 30%;
+    padding: 6px;
+    padding-top: 37px;
+    text-align: center;
+    top: 28%;
+    font-size: 12px;
 }
 .fourth{
-    background-color: rgb(39, 39, 39);
+    background-color: rgb(27, 23, 23);
 }
 .fifth{
     background-color: rgb(215, 230, 19);
 }
 .holding-chip{
     position: fixed;
-    z-index: 0;
+    z-index: -99;
     height: 500px;
     width: 500px;
     right: 0px;
     bottom: 0;
 }
-.build{
-    position: fixed;
-    z-index: 0;
-    height: 140px;
-    width: 140px;
-    right: 580px;
+.spinner{
+    position: relative;
+    left: 800px;
     top: 20vh;
+    width: 300px;
+    height: 300px;
 }
 .build-robot{
     position: fixed;
@@ -119,4 +143,8 @@ div {
 }
 .history1{
     transform: translate(0, 2vh);
+}
+.build{
+    position: fixed;
+    top: 50vh;
 }
