--- a/hassan-bachir/style.css
+++ b/hassan-bachir/style.css
@@ -1,13 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600;700;800;900&family=Roboto:wght@400;500&display=swap');
-   body {
+@import url('https://fonts.googleapis.com/css2?family=Arvo:wght@700&display=swap'); 
+
+body {
     margin: 0;
     padding: 0;
     background-color: #333;
     
 }
+.bold {
+    font-weight: bold;
+    background-color: green;
+    border-radius: 15%;
+    font-size: 2.5rem;
+}
 .wrapper {
     height: 100vh;
-    overflow-y: a;
+    overflow-y: auto;
     overflow-x: hidden;
     perspective: 10px;
     
@@ -20,25 +28,160 @@ header {
     align-items: center;
     height: 100%;
     transform-style: preserve-3d;
-    z-index: -1;
+    z-index: -4;
+}
+.history {
+
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    
+    font-size: 2rem;
+    /* background-color: #b62323; */
+    color: white;
+    z-index: -3;
+    transform-style: preserve-3d;
+    overflow: hidden;
+    
+    
+    
+
+}
+.history-background {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;  
+    z-index: -3;
+    
+    
+}
+.history-background{
+    transform: translateZ(-20px) scale(4);
 }
 
+
+
+
+
 .title {
-    font-size: 3rem;
+    font-size: 2rem;
     font-family: 'Orbitron',sans-serif;
     color:white;
     text-shadow: 0 0 5px black;
     position: absolute;
-    top: 90px;
+    top: -10%;
+    left:-23%;
 }
+
+.title2 {
+    font-size: 2.5rem;
+    font-family: 'Orbitron',sans-serif;
+    color:white;
+    text-shadow: 0 0 5px black;
+    position: absolute;
+    top:-11%;
+    
+}
+.title3 {
+    font-size: 2.5rem;
+    font-family: 'Orbitron',sans-serif;
+    color:white;
+    text-shadow: 0 0 5px black;
+    position: absolute;
+    bottom:400px;
+    right:240px;
+    
+}
+
 .background {
     transform: translateZ(-20px) scale(4);
 
 }
+.title2,
+.chatgpt-image,
+.title,
 .foreground{
     transform: translateZ(-10px) scale(2);
 }
 
+
+.turing1 {
+    position: absolute;
+    max-width: 300px;
+    object-fit: fill;
+    height: auto;
+    z-index: -3;
+    transform: translateZ(-5px) scale(1.5);
+    top: -3%;
+    
+
+}
+.history-turing-title {
+    font-size: 2.5rem;
+    font-family: 'Arvo',sans-serif;
+    color:white;
+    text-shadow: 0 0 5px black;
+   
+}
+.turing-text {
+    font-size: 1.5rem;
+    position: absolute;
+    max-width: 500px;
+    top:120px;
+    right: 40px;
+    border: 6px solid darkgreen;
+    border-radius: 5px;
+    padding: 7px;
+    text-align: center;
+}
+.chess-text {
+    font-size: 1.5rem;
+    position: absolute;
+    max-width: 500px;
+    border: 6px solid darkgreen;
+    border-radius: 5px;
+    padding: 7px;
+    text-align: center;
+    top: 120px;
+    left: 40px;
+}
+
+.robot-chess {
+    position: absolute;
+    max-width: 300px;
+    object-fit: fill;
+    height: auto;
+    z-index: -3;
+    transform: translateZ(-5px) scale(1.5);
+    bottom: 50px;
+    left: -10%;
+    border-radius: 50%;
+}
+.go-image {
+    position: absolute;
+    max-width: 300px;
+    object-fit: fill;
+    height: auto;
+    z-index: -3;
+    transform: translateZ(-5px) scale(1.5);
+    border-radius: 50%;
+    bottom: -40px;
+    right: -100px;
+}
+.go-text {
+    font-size: 1.5rem;
+    position: absolute;
+    max-width: 500px;
+    border: 6px solid darkgreen;
+    border-radius: 5px;
+    padding: 7px;
+    text-align: center;
+    bottom: 60px;
+
+}
 
 
 
@@ -48,14 +191,27 @@ header {
     height: 100%;
     width: 100%;
     object-fit: cover;
-    z-index: -1;
+    z-index: -4;
 }
 .foreground {
     position: absolute;
     object-fit: fill;
-    z-index: -1;
+    max-width: 370px;
+    height: auto;
+    /* left: -20%; */
+    right: 100%;
+    bottom: 27%;
+    z-index: -4;
 }
+.chatgpt-image {
+    position: absolute;
+    object-fit: fill;
+    max-width: 440px;
+    height: auto;
+    top: 27% ;
+    
 
+}
 
 .robot-left-hand {
     position: absolute;
@@ -70,10 +226,4 @@ header {
 }
 
 
-section{
-    font-size: 2rem;
-    padding: 2rem;
-    background-color: #333;
-    color: white;
-}
 
