--- a/Ali-Ayb/detailed-history-style.css
+++ b/Ali-Ayb/detailed-history-style.css
@@ -23,12 +23,13 @@ body {
   font-size: 2rem;
   font-family: "Orbitron", sans-serif;
   color: white;
-  transform: translateZ(-10px) scale(2);
-  margin-left: 700px;
+  transform: translateZ(0px);
+  margin-top: 10vh;
+  margin-left: 35%;
 }
 
 .background {
-  transform: translateZ(-20px) scale(4);
+  transform: translateZ(-30px) scale(5);
   position: absolute;
   height: 100%;
   width: 100%;
@@ -39,15 +40,17 @@ body {
 .container1 {
   display: flex;
   justify-content: space-around;
-  margin-top: 300px;
+  margin-top: 200px;
 }
 .history-parag1 {
   display: inline-block;
   color: white;
   font-size: 24px;
-  margin-bottom: 0px;
   width: 700px;
   margin-left: 50px;
+  background-color: rgb(30, 30, 139);
+  border-radius: 50px;
+  padding: 20px;
 }
 
 .history-img1 {
