--- a/Ali-Ayb/detailed-history-style.css
+++ b/Ali-Ayb/detailed-history-style.css
@@ -37,13 +37,16 @@ body {
   z-index: -4;
 }
 
-.container1 {
+.container1,
+.container2,
+.container3 {
   display: flex;
   justify-content: space-around;
   margin-top: 200px;
 }
 .history-parag1,
-.history-parag2 {
+.history-parag2,
+.history-parag3 {
   display: inline-block;
   color: white;
   font-size: 24px;
@@ -60,6 +63,12 @@ body {
 }
 
 .history-img2 {
+  width: 300px;
+  height: 300px;
+  border-radius: 300px;
+}
+
+.history-img3 {
   width: 300px;
   height: 300px;
   border-radius: 300px;
