--- a/hassan-bachir/current-application-style.css
+++ b/hassan-bachir/current-application-style.css
@@ -5,21 +5,23 @@ body {
   margin: 0;
   padding: 0;
   background-color: #333;
+  
 }
 .bold {
   font-weight: bold;
   background-color: green;
   border-radius: 15%;
-  font-size: 2.5rem;
+  font-size: 1.8rem;
 }
 .wrapper {
   height: 100vh;
   overflow-y: auto;
   overflow-x: hidden;
   perspective: 10px;
+  
 }
 
-.detailed-history-title {
+.title {
   font-size: 2rem;
   font-family: "Orbitron", sans-serif;
   color: white;
@@ -44,10 +46,11 @@ body {
   justify-content: space-around;
   margin-top: 200px;
 }
-.history-parag1,
-.history-parag2,
-.history-parag3 {
+.parag1,
+.parag2,
+.parag3 {
   display: inline-block;
+  text-align: center;
   color: white;
   font-size: 24px;
   width: 700px;
@@ -55,21 +58,35 @@ body {
   background-color: rgb(30, 30, 139);
   border-radius: 50px;
   padding: 20px;
+  
 }
 
-.history-img1 {
-  width: 300px;
-  height: 300px;
+.img1 {
+  width: 400px;
+  height: auto;
 }
 
-.history-img2 {
-  width: 300px;
-  height: 300px;
+.img2 {
+  width: 400px;
+  height: auto;
   border-radius: 300px;
 }
 
-.history-img3 {
+.img3 {
   width: 300px;
-  height: 300px;
-  border-radius: 300px;
+  height: auto;
+  
+}
+.references {
+  margin-top: 100px;
+  margin-left: 13%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #666;
+  width: 70%;
+  height: auto;
+  
+
 }
