--- a/styles/index.css
+++ b/styles/index.css
@@ -16,7 +16,8 @@ div {
     border: 0.5px rgb(61, 58, 58)  solid;
 }
 .first{
-    background-image: url("../pics/Polygon\ Luminary.svg");
+    /* background-image: url("../pics/steampunk_computer_room___4k_ai_wallpaper_by_spiraloso_dfi9avh-pre.jpg"); */
+    background-image: url("../pics/download.png");
     background-size: cover;
     z-index: -100;
     height: 100vh;
@@ -33,8 +34,7 @@ div {
     font-family: 'Orbitron',cursive;
 }
 .second{
-    background-color: rgb(44, 65, 82);
-    z-index: 0;
+    background-color: rgb(61, 92, 117);
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -57,7 +57,7 @@ div {
 }
 .third-inner{
     position: relative;
-    background-color: rgb(200, 253, 235);
+    background-color: rgb(255, 250, 205);
     width: 20%;
     border: 0.7px rgb(129, 129, 1) solid;
     border-radius: 10px;
@@ -77,6 +77,12 @@ div {
     left: 43%;
 }
 .fourth{
+    /* background-image: url("../pics/pexels-dylan-chan-4456051.jpg"); */
+    background-image: url("../pics/future.webp");
+    /* background-image: url("../pics/AI-helps-cities-and-infrastructure-1024x539.jpg"); */
+    background-size: cover;
+    transform: perspective(1000px) translateZ(0px);
+    /* background-attachment: fixed; */
     background-color: rgb(50, 117, 153);
     border: 1px rgb(117, 112, 136) solid;
 }
@@ -168,4 +174,9 @@ div {
     width: 1000px;
     z-index: -49;
     top: 30%;
+}
+.stars{
+    position: absolute;
+    width: 100%;
+    height: 100vh;
 }
