--- a/styles/index.css
+++ b/styles/index.css
@@ -34,6 +34,10 @@ div {
     font-family: 'Orbitron',cursive;
 }
 .second{
+    /* background-image: url("../pics/abstract-technology-ai-arm-digital-artificial-intelligence_36402-260.jpg"); */
+    background-image: url("../pics/pure.avif"); 
+    background-size: cover;
+    height: 100vh;
     background-color: rgb(61, 92, 117);
     display: flex;
     flex-direction: column;
@@ -139,25 +143,24 @@ div {
     width: 25%;
 }
 .alan{
-    width: 200px;
+    width: 250px;
     height: 200px;
-    transform: translate(820px, 30px);
+    transform: translate(180px, 70px);
 }
 .line1{
+    transform: translate(600px, 100px);
     text-align: center;
     width: 50%;
-    transform: translate(10px, 80px);
 }   
 .line2{
     text-align: center;
     width: 50%;
-    transform: translate(10px, 80px);
-
+    transform: translate(600px, 100px);
 }
 .robot-chess{
     width: 250px;
     height: 200px;
-    transform: translate(800px, 0);
+    transform: translate(180px, 70px);
 }
 .history2{
     transform: translate(0, 50vh);
@@ -179,4 +182,15 @@ div {
     position: absolute;
     width: 100%;
     height: 100vh;
+}
+.magnifier{
+    position: absolute;
+    width: 100px;
+}
+.binary{
+    position: absolute;
+    width: 60%;
+    opacity: 0.3;
+    right: 10px;
+    height: 100%;
 }
